# gridfan

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.yml  gridfan.pro  gridfan.service
gridfan/: CMakeLists.txt  gridfan.pro  logger.hpp  main.cpp  temperature.cpp  temperature.hpp
gridfan-gui/: application.cpp  application.h  fancontrollerform.cpp  fancontrollerform.h  fancontrollerform.ui  gridfan-gui.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
libgridfan/: CMakeLists.txt  libgridfan.cpp  libgridfan.h  libgridfan.hpp  libgridfan.pro  serial.c  serial.h  serial.hpp
